fixed clipping issues in description

--- a/src/sass/catalog.scss
+++ b/src/sass/catalog.scss
@@ -185,7 +185,7 @@
 		height: 15px;
 		width: 356px;
 		display: block;
-		margin-top: 106px;
+		margin-top: 116px;
 		background: white;
 		box-shadow: 0 -3px 5px white;
 	}
